examples/checker_tests/bad/duplicate-header.p4
header h {
    bit<8> x;
}
header h {
    bit<2> y;
}
